Check URL validity and internet connectivity before checking  connectivity to URL.

--- a/reachablilitymanager/src/main/AndroidManifest.xml
+++ b/reachablilitymanager/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sample.reachablility.reachablilitymanager"/>
+    package="sample.reachablility.reachablilitymanager">
+
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+</manifest>
