--- a/reachablilitymanager/src/main/AndroidManifest.xml
+++ b/reachablilitymanager/src/main/AndroidManifest.xml
@@ -2,4 +2,5 @@
     package="sample.reachablility.reachablilitymanager">
 
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
